--- a/old_feedback.html
+++ b/old_feedback.html
@@ -475,12 +475,11 @@
                             <label>Category <span class="required">*</span></label>
                             <select id="category" required>
                                 <option value="">Select Category</option>
-                                <option value="Course Content">Course Content</option>
-                                <option value="Teaching Methods">Teaching Methods</option>
-                                <option value="Faculty Interaction">Faculty Interaction</option>
-                                <option value="Evaluation & Assessment">Evaluation & Assessment</option>
-                                <option value="Academic Events">Academic Events</option>
-                                <option value="Other Academic">Other Academic</option>
+                                <option value="Lectures">Lectures</option>
+                                <option value="Classrooms">Classrooms</option>
+                                <option value="Facilities">Facilities</option>
+                                <option value="Events">Events</option>
+                                <option value="Other">Other</option>
                             </select>
                         </div>
 
