--- a/feedback.html
+++ b/feedback.html
@@ -14,9 +14,12 @@
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            overflow-x: hidden;
             background: #f5f7fa;
-            min-height: 100vh;
             color: #333;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
         }
 
         .navbar {
@@ -58,6 +61,8 @@
             max-width: 1000px;
             margin: 40px auto;
             padding: 0 20px;
+            flex: 1;
+            width: 100%;
         }
 
         .form-header {
@@ -282,7 +287,8 @@
             color: white;
             text-align: center;
             padding: 20px;
-            margin-top: 60px;
+            margin-top: 0;
+            width: 100%;
         }
 
         footer p {
@@ -375,7 +381,7 @@
 
                     <div class="section-header">Academic Feedback Details</div>
 
-                    <div class="form-grid">
+                    <div class="form-grid full-width">
                         <div class="form-group">
                             <label>Category <span class="required">*</span></label>
                             <select id="category" required>
@@ -385,35 +391,17 @@
                                 <option value="Faculty Interaction">Faculty Interaction</option>
                                 <option value="Evaluation & Assessment">Evaluation & Assessment</option>
                                 <option value="Academic Events">Academic Events</option>
-                                <option value="Other Academic">Other Academic</option>
-                            </select>
-                        </div>
-
-                        <div class="form-group">
-                            <label>Subcategory <span class="optional">(Optional)</span></label>
-                            <select id="subcategory">
-                                <option value="">Select Category First</option>
+                                <option value="Other">Other</option>
                             </select>
                         </div>
                     </div>
 
-                    <div class="form-grid full-width">
-                        <div class="form-group">
-                            <label>Urgency Level <span class="required">*</span></label>
-                            <select id="urgency" required>
-                                <option value="">Select Urgency</option>
-                                <option value="Low">Low Priority</option>
-                                <option value="Medium">Medium Priority</option>
-                                <option value="High">High Priority</option>
-                            </select>
-                        </div>
-                    </div>
+
 
                     <div class="form-grid full-width">
                         <div class="form-group">
                             <label>Your Feedback <span class="required">*</span></label>
-                            <textarea id="feedbackText"
-                                placeholder="Please share your detailed feedback on academic matters..."
+                            <textarea id="feedbackText" placeholder="Please share your detailed feedback here..."
                                 required></textarea>
                         </div>
                     </div>
@@ -421,7 +409,7 @@
                     <div class="form-grid full-width">
                         <div class="form-group">
                             <label>Suggestions for Improvement <span class="optional">(Optional)</span></label>
-                            <textarea id="suggestions" placeholder="Any suggestions on how we can improve academically?"
+                            <textarea id="suggestions" placeholder="Any suggestions on how we can improve?"
                                 rows="4"></textarea>
                         </div>
                     </div>
@@ -440,8 +428,23 @@
         <div class="success-content">
             <div class="icon">✅</div>
             <h2>Thank You!</h2>
-            <p>Your academic feedback has been submitted successfully. We appreciate your contribution to improving our
+            <p>Your academic feedback has been submitted successfully. We appreciate your contribution to improving
+                our
                 teaching and learning.</p>
+
+            <div class="tracking-info"
+                style="background: #f8f9fa; border: 1px solid #e0e0e0; border-radius: 8px; padding: 20px; margin: 20px 0; text-align: left;">
+                <div class="tracking-id"
+                    style="font-size: 18px; font-weight: 600; color: #1e5ba8; margin-bottom: 10px; word-break: break-all;">
+                    Your Feedback ID: <span id="feedbackIdSpan"></span>
+                </div>
+                <div class="tracking-instructions" style="font-size: 14px; color: #666; line-height: 1.6;">
+                    <strong>Save this ID!</strong> You can use it to track the status of your feedback.
+                </div>
+                <a href="#" class="btn-track" id="trackFeedbackBtn"
+                    style="background: #28a745; color: white; padding: 10px 20px; border: none; border-radius: 6px; font-size: 14px; font-weight: 600; cursor: pointer; transition: all 0.3s; margin-top: 15px; display: inline-block; text-decoration: none;">Track
+                    Your Feedback</a>
+            </div>
             <button class="btn-close" onclick="closeModal()">Close</button>
         </div>
     </div>
@@ -452,85 +455,11 @@
 
     <script>
         // Academic-focused subcategories
-        const subcategories = {
-            'Course Content': [
-                'Syllabus Coverage',
-                'Relevance to Industry',
-                'Difficulty Level',
-                'Course Material Quality',
-                'Textbook Recommendations',
-                'Prerequisites Clarity',
-                'Other'
-            ],
-            'Teaching Methods': [
-                'Lecture Clarity',
-                'Use of Teaching Aids',
-                'Pace of Teaching',
-                'Interactive Sessions',
-                'Problem-Solving Approach',
-                'Real-World Examples',
-                'Other'
-            ],
-            'Faculty Interaction': [
-                'Availability for Doubts',
-                'Response to Queries',
-                'Mentorship Quality',
-                'Communication Style',
-                'Approachability',
-                'Office Hours',
-                'Other'
-            ],
-            'Evaluation & Assessment': [
-                'Assignment Quality',
-                'Exam Difficulty',
-                'Grading Fairness',
-                'Feedback on Submissions',
-                'Project Evaluation',
-                'Quiz Frequency',
-                'Other'
-            ],
-            'Academic Events': [
-                'Guest Lectures',
-                'Workshops',
-                'Seminars',
-                'Conferences',
-                'Academic Competitions',
-                'Research Presentations',
-                'Other'
-            ],
-            'Other Academic': [
-                'Lab Sessions',
-                'Tutorial Classes',
-                'Course Registration',
-                'Academic Counseling',
-                'Research Opportunities',
-                'Other'
-            ]
-        };
-
         const categorySelect = document.getElementById('category');
-        const subcategorySelect = document.getElementById('subcategory');
         const feedbackForm = document.getElementById('feedbackForm');
         const successModal = document.getElementById('successModal');
 
-        categorySelect.addEventListener('change', function () {
-            const category = this.value;
-            subcategorySelect.innerHTML = '<option value="">Select Subcategory</option>';
-
-            if (category && subcategories[category]) {
-                subcategories[category].forEach(sub => {
-                    const option = document.createElement('option');
-                    option.value = sub;
-                    option.textContent = sub;
-                    subcategorySelect.appendChild(option);
-                });
-                subcategorySelect.disabled = false;
-            } else {
-                subcategorySelect.disabled = true;
-            }
-        });
-
-        feedbackForm.addEventListener('submit', function (e) {
+        feedbackForm.addEventListener('submit', async function (e) {
             e.preventDefault();
 
             const formData = {
@@ -539,20 +468,56 @@
                 department: document.getElementById('department').value,
                 courseNo: document.getElementById('courseNo').value,
                 category: document.getElementById('category').value,
-                subcategory: document.getElementById('subcategory').value,
-                urgency: document.getElementById('urgency').value,
-                feedback: document.getElementById('feedbackText').value,
+                text: document.getElementById('feedbackText').value,
                 suggestions: document.getElementById('suggestions').value,
-                timestamp: new Date().toISOString()
+                createdAt: new Date().toISOString()
             };
 
-            console.log('Form Data:', formData);
+            const submitBtn = document.querySelector('.btn-submit');
+            const originalBtnText = submitBtn.textContent;
+            submitBtn.disabled = true;
+            submitBtn.textContent = 'Submitting...';
 
-            // Here you would send formData to your backend
-            // For now, just show success modal
-            successModal.classList.add('active');
-            feedbackForm.reset();
+            // Generate a temporary ID just in case (fallback)
+            const chars = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789_-';
+            let tempId = 'FB-' + Date.now().toString(36).toUpperCase();
+
+            try {
+                const response = await fetch('/api/feedbacks', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify(formData)
+                });
+
+                if (response.ok) {
+                    const result = await response.json();
+                    showSuccessModal(result.id);
+                    feedbackForm.reset();
+                } else {
+                    throw new Error('API error');
+                }
+            } catch (error) {
+                console.error('Submission error:', error);
+                // Fallback: Save to localStorage
+                const feedbacks = JSON.parse(localStorage.getItem('feedbacks') || '[]');
+                formData.id = tempId;
+                formData.status = 'pending';
+                feedbacks.push(formData);
+                localStorage.setItem('feedbacks', JSON.stringify(feedbacks));
+                showSuccessModal(tempId);
+                feedbackForm.reset();
+            }
+
+            submitBtn.disabled = false;
+            submitBtn.textContent = originalBtnText;
         });
+
+        function showSuccessModal(feedbackId) {
+            document.getElementById('feedbackIdSpan').textContent = feedbackId;
+            const trackBtn = document.getElementById('trackFeedbackBtn');
+            trackBtn.href = `track-feedback.html?id=${feedbackId}`;
+            successModal.classList.add('active');
+        }
 
         function closeModal() {
             successModal.classList.remove('active');
