--- a/track-feedback.html
+++ b/track-feedback.html
@@ -615,7 +615,7 @@
                 <div class="feedback-card">
                     <div class="feedback-header">
                         <div class="feedback-id">${feedback.id}</div>
-                        <div class="feedback-date">${feedback.createdAtDisplay || formatDate(feedback.createdAt)}</div>
+                        <div class="feedback-date">${formatDate(feedback.createdAt)}</div>
                     </div>
                     <div class="feedback-body">
                         <div class="feedback-meta">
