--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -362,7 +362,8 @@
             </div>
         </div>
         <div class="nav-links">
-            <a href="#" onclick="logout()">Logout</a>
+            <a href="admin_login.html?switch=1">Switch Department</a>
+            <button class="btn-logout" onclick="logout()">Logout</button>
         </div>
     </nav>
 
@@ -374,7 +375,7 @@
 
         <div class="stats-grid">
             <div class="stat-card">
-                <h3 id="totalFeedback">0</h3>
+                <h3 id="stat-total">0</h3>
                 <p>Total Feedback</p>
             </div>
             <div class="stat-card">
