--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -260,7 +260,7 @@
                     onerror="this.style.display='none'">
                 <div class="logo-text">
                     <div class="logo-main-text">Indian Institute of Technology Bombay</div>
-                    <div class="logo-sub-text">🔧 Super Admin Dashboard</div>
+                    <div class="logo-sub-text">🏢 Super Admin Dashboard</div>
                 </div>
             </div>
         </div>
