--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -432,6 +432,63 @@
                     const text = document.createElement('p');
                     text.style.color = '#333';
                     text.style.lineHeight = '1.6';
+                    text.style.marginBottom = '12px';
+                    text.style.fontSize = '14px';
+                    text.textContent = item.text;
+                    wrapper.appendChild(text);
+
+                    if (item.suggestions && item.suggestions.trim()) {
+                        const suggestionsEl = document.createElement('div');
+                        suggestionsEl.style.marginTop = '12px';
+                        suggestionsEl.style.padding = '12px';
+                        suggestionsEl.style.backgroundColor = '#f0f7ff';
+                        suggestionsEl.style.borderLeft = '4px solid #1e5ba8';
+                        suggestionsEl.style.borderRadius = '4px';
+                        const label = document.createElement('p');
+                        label.style.fontWeight = '600';
+                        label.style.color = '#1e5ba8';
+                        label.style.marginBottom = '6px';
+                        label.style.fontSize = '13px';
+                        label.textContent = '💡 Suggestions:';
+                        const sText = document.createElement('p');
+                        sText.style.margin = '0';
+                        sText.style.fontSize = '14px';
+                        sText.style.color = '#333';
+                        sText.textContent = item.suggestions;
+                        suggestionsEl.appendChild(label);
+                        suggestionsEl.appendChild(sText);
+                        wrapper.appendChild(suggestionsEl);
+                    }
+
+                    if (item.portalSuggestions && item.portalSuggestions.trim()) {
+                        const portalSuggestionsEl = document.createElement('div');
+                        portalSuggestionsEl.style.marginTop = '12px';
+                        portalSuggestionsEl.style.padding = '12px';
+                        portalSuggestionsEl.style.backgroundColor = '#f5f0ff';
+                        portalSuggestionsEl.style.borderLeft = '4px solid #6f42c1';
+                        portalSuggestionsEl.style.borderRadius = '4px';
+                        const label = document.createElement('p');
+                        label.style.fontWeight = '600';
+                        label.style.color = '#6f42c1';
+                        label.style.marginBottom = '6px';
+                        label.style.fontSize = '13px';
+                        label.textContent = '💡 Portal Improvement Suggestions:';
+                        const pText = document.createElement('p');
+                        pText.style.margin = '0';
+                        pText.style.fontSize = '14px';
+                        pText.style.color = '#333';
+                        pText.style.whiteSpace = 'pre-line';
+                        pText.textContent = item.portalSuggestions;
+                        portalSuggestionsEl.appendChild(label);
+                        portalSuggestionsEl.appendChild(pText);
+                        wrapper.appendChild(portalSuggestionsEl);
+                    }
+
+                    if (item.studentName || item.rollNo || item.department || item.courseNo) {
+                        const info = document.createElement('div');
+                        info.style.marginTop = '12px';
+                        info.style.padding = '10px';
+                        info.style.backgroundColor = '#fafafa';
                         info.style.borderRadius = '4px';
                         info.style.fontSize = '13px';
                         info.style.color = '#666';
